feat(skills): publish principal-level marketplace audit
Review all 258 skills and strengthen 231 packages with expert decision guidance, diagnostics, failure modes, production constraints, references, and coherent cross-skill routing. Add the feature-engineering suite, complete audit reports, release automation helpers, and prepare workspace version 1.3.0.