@@ -1,108 +1,145 @@
 ---
 name: concurrency-diagnostics
 description: >
-  Collecting evidence for a concurrency problem and knowing each tool's blind spot: the two
-  thread-dump formats and why neither is a superset of the other, jstack not listing virtual
-  threads, ThreadMXBean not detecting virtual-thread deadlocks, the JFR events for parking,
-  monitors, pinning and submission failure, and reading a dump with a hundred thousand
-  threads. Use when nothing is progressing and the cause is unknown, when a dump comes back
-  suspiciously short, when a deadlock is suspected but no detector reports one, when threads
-  are BLOCKED or the CPU is idle while latency climbs, when work submitted to an executor
-  disappears, when a runbook still says jstack or -Djdk.tracePinnedThreads, or when a
-  symptom has to be classified before it can be routed to an owner. Not choosing and running
-  a profiler (jfr-and-async-profiler), reading a flame graph (flame-graph-analysis), monitor
-  internals (lock-inflation), pinning internals (virtual-threads-internals), or
-  happens-before (java-memory-model).
+  Evidence-led diagnosis of deadlock, starvation, livelock, saturation, leaks and virtual-thread
+  scheduler problems. Compares traditional platform-thread dumps, jcmd all-thread dumps,
+  ThreadMXBean, VirtualThreadSchedulerMXBean, JFR, wall/CPU profiles and application telemetry,
+  including each tool's visibility and consistency limits. Use when progress stops, CPU and
+  latency disagree, tasks disappear, shutdown hangs, or a virtual-thread dump is inconclusive.
 ---
 
 # Concurrency Diagnostics
 
 ## Purpose
 
-Replace "it looks like a deadlock" with evidence that distinguishes deadlock from
-starvation, from saturation, from a downstream that is simply slow. All four present the
-same way — requests not completing, CPU low — and each has a different fix, so guessing costs
-a deploy cycle per guess.
+Classify loss of progress before changing concurrency policy. Deadlock, starvation, saturation,
+livelock, a slow dependency and leaked work can all produce high latency with little useful CPU,
+but their confirming evidence and remediation differ.
 
-The second purpose is knowing what each tool cannot see. Every standard concurrency tool has
-a blind spot that widened when virtual threads arrived, and several of them fail by returning
-plausible, incomplete answers rather than errors.
+This skill owns evidence collection and classification. It routes proven causes to the skills that
+own JMM correctness, lock internals, executor lifecycle, virtual-thread mechanics or capacity.
 
-## Workflow
+## Evidence workflow
 
-1. **Classify the symptom** into one of four shapes before collecting anything: nothing
-   progresses, everything is slow, work disappears, or memory grows with in-flight work.
-2. **Take both dumps.** `Thread.print` for lock ownership and deadlock detection,
-   `Thread.dump_to_file -format=json` for virtual threads and scope hierarchy. Neither
-   contains the other's information.
-3. **Take the second dump 10–30 seconds later.** Identical stacks mean stuck; changing stacks
-   mean slow. This one comparison resolves more incidents than any single tool.
-4. **Reach for JFR when the question is "how often" or "for how long"** rather than "what is
-   happening right now" — parking, monitor waits, pinning, socket and file I/O all have
-   events with durations.
-5. **Use a wall-clock profile, never a CPU profile, for waiting.** A CPU profile of a service
-   that is waiting is empty by construction, and the emptiness is often misread as health.
-6. **Route to the owning skill** once the class is established, and stop collecting.
+1. Freeze the incident interval: timestamps, deployment/JDK build, traffic, CPU quota, changes and
+   affected operation/tenant.
+2. Define progress numerically: completions, queue age, successful state transitions or durable
+   offsets—not “threads look stuck.”
+3. Capture application state: accepted/started/completed/failed/cancelled/rejected counts, queue age
+   and depth, in-flight work, resource permits/connections and downstream latency.
+4. Capture multiple thread views several seconds apart. Use traditional dumps for platform-thread
+   locks/deadlock detection and `Thread.dump_to_file` for virtual threads/containers.
+5. Record JFR with inspected event settings and pair CPU with wall-clock profiling when off-CPU time
+   matters.
+6. Form competing hypotheses and list the signal each predicts. Change nothing until evidence can
+   discriminate at least the leading alternatives.
+7. Apply the smallest reversible remediation, then validate progress, latency, residual work and
+   resource recovery.
 
-## Symptom to evidence
+Sampling twice does not prove a thread is permanently stuck: long waits and slow operations can show
+identical stacks. Use a duration appropriate to the operation deadline and corroborate ownership and
+progress counters.
 
-| Symptom                                          | First evidence                                                 | Then                                              |
-| ------------------------------------------------ | -------------------------------------------------------------- | ------------------------------------------------- |
-| Nothing completes, CPU near zero                 | two `Thread.print` dumps + the JSON dump                       | deadlock, starvation or a stuck downstream        |
-| Everything slow, CPU near zero                   | executor queue depth, pool wait time, in-flight count          | `littles-law-and-queueing`                        |
-| Everything slow, CPU high, GC normal             | wall-clock and CPU flame graphs side by side                   | `flame-graph-analysis`, `lock-inflation`          |
-| Threads BLOCKED on a monitor                     | `jdk.JavaMonitorEnter` durations, `Thread.print`               | `lock-inflation`                                  |
-| Throughput flat as threads are added             | scaling curve, `jdk.JavaMonitorEnter`, CAS retry counters      | `universal-scalability-law`, `lock-free-patterns` |
-| Carrier count climbing towards `maxPoolSize`     | JSON dump over time, `jdk.VirtualThreadPinned`                 | `blocking-and-nonblocking-io`                     |
-| Submitted work never runs and nothing is logged  | executor queue depth, rejection count, code review of `submit` | `executors-and-task-lifecycle`                    |
-| A periodic job stopped without an error          | last-success freshness metric                                  | `executors-and-task-lifecycle`                    |
-| Memory grows in proportion to in-flight requests | heap after full GC, in-flight gauge                            | `concurrency-limiting-and-bulkheads`              |
-| Scope closes far later than it fails             | JSON dump during close; look for uninterruptible subtasks      | `cancellation-and-interruption`                   |
+## Tool capability matrix (Java 25)
 
-## Rules
+| Evidence                                           | Includes virtual threads                                      | Lock ownership/deadlock                                                                               | Consistency and blind spot                                                          |
+| -------------------------------------------------- | ------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------- |
+| `jcmd <pid> Thread.print -l` / `jstack`            | no                                                            | monitors/ownable synchronizers for platform threads; HotSpot may print detected cycles                | stop-the-world style snapshot; high thread count/attach conditions affect impact    |
+| `jcmd <pid> Thread.dump_to_file -format=json file` | normally all tracked platform/virtual threads plus containers | Java 25 simple dump omits traditional object/lock detail and performs no automatic deadlock detection | not one globally simultaneous snapshot; per-thread timestamps/schema/runtime matter |
+| `ThreadMXBean`                                     | no                                                            | platform-thread monitor/ownable-synchronizer cycles only                                              | explicitly does not manage virtual threads; methods may be expensive                |
+| Java 24+ `VirtualThreadSchedulerMXBean`            | scheduler aggregates                                          | none                                                                                                  | pool/mounted/queued values are estimates and may return `-1`                        |
+| JFR                                                | duration/frequency events when configured                     | stacks for observed monitor/park/pin events, not a complete wait-for graph                            | disabled events and thresholds censor short/absent samples                          |
+| CPU profile                                        | running sampled work                                          | no                                                                                                    | cannot attribute most parked time                                                   |
+| wall-clock profile                                 | sampled on/off-CPU stacks subject to profiler support         | no ownership graph                                                                                    | sampling and thread filters can bias high-cardinality VT workloads                  |
 
-- **`jstack` and `jcmd Thread.print` do not list virtual threads.** The dump comes back short,
-  which reads as "not many threads" — the opposite of the truth. Any runbook that stops here
-  is misleading, not merely incomplete.
-- **The JSON dump does not contain lock information.** It deliberately omits object addresses,
-  monitors and JNI statistics, so it cannot answer "who holds this lock" and cannot detect a
-  deadlock. Use both formats; neither is a superset.
-- **`ThreadMXBean.findDeadlockedThreads()` finds cycles of platform threads only.** A
-  deadlock among virtual threads is invisible to it and to everything built on it, including
-  most APM deadlock alerts. There is no automatic detector for that case — it must be found
-  by reading the JSON dump.
-- `-Djdk.trackAllThreads=false` makes virtual threads created directly through
-  `Thread.Builder` potentially absent from the JSON dump. If a dump seems to be missing
-  threads you know exist, check the command line before disbelieving the tool.
-- **`-Djdk.tracePinnedThreads` was removed in JDK 24.** It is still accepted on the command
-  line and does nothing, which is worse than an error. The only source of truth for pinning
-  is the JFR event `jdk.VirtualThreadPinned` — whose default 20 ms threshold hides the
-  frequent short pins that matter most.
-- **A CPU profile cannot see waiting.** For latency questions collect wall-clock samples
-  (`asprof -e wall`) or JFR, and compare the two: work that appears in the wall-clock graph
-  and not in the CPU graph _is_ the waiting.
-- **Two dumps beat one dump every time.** A single dump shows where threads are; two show
-  whether they are moving. Take three if the answer is ambiguous.
-- With tens of thousands of virtual threads, do not read the dump — **aggregate it**. Group
-  by stack signature and count; the interesting stacks are the ones with a surprising count,
-  not the ones at the top of the file.
-- `jdk.VirtualThreadSubmitFailed` is enabled by default and means the scheduler could not
-  accept a virtual thread — a resource problem that will otherwise surface as an unexplained
-  failure much later.
-- An idle-looking service with a full queue is not idle. Always pair CPU with a queue-depth or
-  in-flight metric; either one alone supports the wrong conclusion.
-- Diagnose before tuning. Raising `jdk.virtualThreadScheduler.maxPoolSize`, growing a pool or
-  adding a retry in response to an unclassified symptom changes the shape of the evidence and
-  usually removes the signal that would have identified the cause.
+The HotSpot diagnostic MXBean contract says an all-thread dump includes all platform threads and may
+include some or all virtual threads. Tracking/runtime configuration therefore matters. A missing
+virtual thread is not proof it did not exist.
+
+Java 26 improves simple-dump lock information; do not silently apply Java 26 interpretation to a
+Java 21/25 incident. Record the exact runtime and dump schema.
+
+## Classification table
+
+| Candidate                       | Progress/CPU shape                                    | Evidence that strengthens it                                            | Evidence that weakens it                                         |
+| ------------------------------- | ----------------------------------------------------- | ----------------------------------------------------------------------- | ---------------------------------------------------------------- |
+| lock deadlock                   | relevant completions flat; usually low CPU            | stable wait-for cycle with owners, or platform detector output          | stacks move and operation completions continue                   |
+| liveness wait on external event | completions flat; low CPU                             | waiters share a resource/event whose producer is absent or failed       | owner/producer continues signalling successfully                 |
+| starvation/unfairness           | some class progresses while another ages              | per-class queue age/service counts diverge with sustained contention    | all classes degrade together at a saturated resource             |
+| executor/resource saturation    | completions continue below arrivals; queue age grows  | utilization, queueing and protected-resource occupancy correlate        | queue remains empty and capacity idle                            |
+| livelock/retry spin             | attempts/CPU high, commits flat                       | retry/CAS failure or state-transition attempts increase without success | useful completion rises with attempts                            |
+| pinning/carrier pressure        | VT scheduler queue grows while carriers unavailable   | scheduler MXBean + pinned/native/foreign stack evidence                 | scheduler queue is low or CPU is simply saturated                |
+| leaked/late work                | caller completes/cancels but operation remains active | operation IDs persist past owner deadline; resources not returned       | provider confirms cancellation and in-flight returns to baseline |
+
+Thread state alone is not classification. `BLOCKED` specifically means monitor entry, while
+`WAITING`/`TIMED_WAITING` can be healthy queue, join, condition or I/O protocol behavior. Virtual
+threads can be unmounted while waiting; OS thread count is not their concurrency count.
+
+## Virtual-thread evidence
+
+On Java 24+, use `VirtualThreadSchedulerMXBean` for target parallelism, current scheduler platform
+threads, mounted virtual threads and queued virtual threads. Values are estimates; trends aligned to
+latency are more useful than one sample. Do not grep generic `ForkJoinPool-*-worker` names to count
+carriers: other pools share that naming shape.
+
+JDK 24 eliminated pinning caused by `synchronized`/`Object.wait`, but virtual threads can still pin
+during native methods or foreign-function calls. File-system operations may capture/temporarily add
+carrier threads without being the same mechanism as pinning. Route exact mechanics to
+`virtual-threads-internals` and `blocking-and-nonblocking-io`.
+
+Relevant JFR events include `jdk.VirtualThreadPinned`, `jdk.VirtualThreadSubmitFailed`, and optional
+start/end events. Default enablement/thresholds are template- and release-dependent operational
+settings; inspect the recording metadata/configuration. `SubmitFailed` points to failure starting or
+unparking a virtual thread, probably resource-related; correlate it with the initiating failure.
+
+## Deadlock limits
+
+`ThreadMXBean.findDeadlockedThreads()` explicitly excludes cycles containing virtual threads. A Java
+25 JSON/simple dump provides stacks and hierarchy but insufficient ownership data to prove many lock
+cycles by itself. Combine application lock/resource identifiers, owner instrumentation, JFR events,
+platform-thread information and reproducible wait-for edges. “No detector result” means only “no
+supported platform-thread cycle found.”
+
+Timeouts can bound impact but do not prove absence of deadlock, and retries can multiply held work.
+Fix the wait-for graph: ordering, ownership, nested acquisition or alien calls.
+
+## Production guardrails
+
+- Instrument lifecycle conservation: `accepted = running + queued + terminal` for a clearly defined
+  instant/model; label rejection and cancellation separately. Snapshot races require tolerances.
+- Track queue _age_ as well as depth. A short deep burst and one ancient item require different action.
+- Use monotonic deadlines for waits and correlate caller timeout with actual provider cancellation.
+- Preserve incident artifacts before tuning parallelism, capacity or retries.
+- Avoid high-cardinality thread/task metrics; attach operation/resource identities to traces or
+  sampled diagnostic events.
+- Sanitize dumps: names, stack arguments, paths and context can disclose tenant/security data.
+
+## Symptom-driven response
+
+| Symptom                              | Next discriminating evidence                                            | Route after confirmation                       |
+| ------------------------------------ | ----------------------------------------------------------------------- | ---------------------------------------------- |
+| queue age grows, CPU low             | worker stacks plus protected resource wait/occupancy                    | executor lifecycle, limiting, connection pools |
+| high CPU, few completions            | CPU profile plus attempt/success counters                               | lock-free/livelock or hot computation          |
+| shutdown exceeds grace period        | owner-to-task IDs, interrupt state, provider active work                | cancellation and executor lifecycle            |
+| periodic effect stops                | scheduled future outcome, last-attempt/last-success, executor rejection | executors and task lifecycle                   |
+| virtual-thread scheduler queue rises | scheduler MXBean, CPU, pin/native/foreign and blocking stacks           | virtual-thread internals or CPU capacity       |
+| memory follows in-flight/queue       | heap dominators plus lifecycle counters                                 | concurrency limiting and heap analysis         |
+
+## Review checklist
+
+- [ ] Progress is defined by business/task completion, not thread state.
+- [ ] JDK build, dump type, recording settings and collection timestamps are recorded.
+- [ ] Platform and virtual-thread visibility limitations are explicit.
+- [ ] At least two competing hypotheses and discriminating signals were considered.
+- [ ] Queue age, lifecycle counts and scarce-resource occupancy accompany stack evidence.
+- [ ] Absence of JFR/detector events is not treated as absence without configuration coverage.
+- [ ] Remediation was validated for useful progress, tail latency, residual work and resource return.
 
 ## References
 
-- [Reading a thread dump](references/thread-dump-reading.md) — the commands for both formats,
-  what each contains, the deadlock and starvation signatures, aggregating a dump with a
-  hundred thousand virtual threads, reading a `StructuredTaskScope` hierarchy, and the JFR
-  event list with thresholds. Read while collecting evidence.
-- [Failure-mode catalogue](references/failure-mode-triage.md) — deadlock, livelock,
-  starvation, saturation, task leak, forgotten cancellation, permit leak, pool exhaustion,
-  retry storm and unbounded fan-out, each with its symptoms, the measurement that confirms
-  it, the fix and the prevention. Read once the class is known, or to identify it from a
-  symptom.
+- [Thread dump interpretation](references/thread-dump-reading.md)
+- [Failure-mode triage](references/failure-mode-triage.md)
+- [Java 25 `ThreadMXBean`](https://docs.oracle.com/en/java/javase/25/docs/api/java.management/java/lang/management/ThreadMXBean.html)
+- [Java 25 `VirtualThreadSchedulerMXBean`](https://docs.oracle.com/en/java/javase/25/docs/api/jdk.management/jdk/management/VirtualThreadSchedulerMXBean.html)
+- [Java 25 virtual-thread guide](https://docs.oracle.com/en/java/javase/25/core/virtual-threads.html)
+- [JEP 491: Synchronize Virtual Threads without Pinning](https://openjdk.org/jeps/491)
