@@ -18,7 +18,8 @@ description: >
 ## Purpose
 
 Decide why a G1 marking cycle is failing to do its job — starting too late for the real
-promotion rate, restarting because the SATB queue overflowed, or never finishing before the
+old-generation allocation rate, restarting because the object-mark stack exhausted its maximum,
+or never finishing before the
 old generation fills — and which of those the evidence in the log actually supports. Marking
 is the only thing that tells the mixed collector which regions are worth evacuating; when it
 is late or aborted, the collector loses its input and falls back to a full GC.
@@ -39,9 +40,10 @@ Cleanup`. `Pause Mark Start` / `Pause Mark End` are ZGC's — a log quoting thos
    `java -XX:+PrintFlagsFinal -version | grep G1UseAdaptiveIHOP`. With the default `true`,
    `InitiatingHeapOccupancyPercent` is only the initial floor, and marking starting away from
    45% is the predictor working, not a bug.
-4. **Track the occupancy at each `Pause Young (Concurrent Start)` over time.** A rising
-   series is the predictor running behind the real promotion rate — the signature of a cycle
-   starting too late.
+4. **Track each trigger with its effective threshold, old-allocation rate, marking duration and
+   post-cycle reclaim.** Rising start occupancy alone can reflect a changed old capacity/live set
+   or a healthy adaptive threshold. “Too late” requires insufficient headroom for marking plus
+   the mixed-collection/reclamation phase, evacuation failure or full-GC evidence.
 5. **Classify the failure mode from the log line, not from the full GC.** Mark stack
    overflow, evacuation failure and humongous pressure produce different upstream evidence.
    Use the table in `references/marking-pathologies.md`.
@@ -62,10 +64,11 @@ Cleanup`. `Pause Mark Start` / `Pause Mark End` are ZGC's — a log quoting thos
   `Unrecognized VM option` on JDK 11 — the JVM refuses to start and suggests the flag that did
   survive. For remembered-set cost use `-XX:G1SummarizeRSetStatsPeriod=<n>` with
   `-Xlog:gc+remset=trace`.
-- With `G1UseAdaptiveIHOP=true` (default), setting a static IHOP **competes** with the
-  predictor rather than replacing it predictably. Fixing a value manually is justified for
-  bursty traffic, where the predictor never accumulates representative samples and is always
-  reacting to the previous regime.
+- With `G1UseAdaptiveIHOP=true` (default), `InitiatingHeapOccupancyPercent` supplies the initial
+  threshold until enough observations exist; the adaptive controller then derives the effective
+  threshold. To impose a fixed value, disable adaptive IHOP explicitly. That can make a persistently
+  regime-switching workload more predictable, but forfeits adaptation to live-set, allocation-rate
+  and cycle-time changes; validate full cycles and headroom before/after.
 - `Pause Cleanup` (STW) and `Concurrent Cleanup` (concurrent) are two distinct phases sharing
   a word. Reporting `Concurrent Cleanup` as a short STW pause is self-contradictory.
 - The SATB barrier enqueues the **old** value of the field, never the new one. It guarantees
@@ -85,10 +88,11 @@ Cleanup`. `Pause Mark Start` / `Pause Mark End` are ZGC's — a log quoting thos
   `Pause Cleanup`.
 - Objects allocated at or above a region's TAMS are implicitly live and are never marked in
   the bitmap. That is what lets promotion continue during a cycle without forcing re-marking.
-- Eager reclaim frees humongous regions inside an ordinary STW pause, but **only** for objects
-  whose remembered set shows no other region pointing at them. A humongous object that survives
-  long enough to accumulate cross-region references is not eligible and waits for a complete
-  cycle. **There is no boolean to turn this off from JDK 20.**
+- Eager reclaim frees eligible humongous regions inside an ordinary STW pause. Eligibility is
+  release-specific and considers marking/allocation timing, object kind/pointers, remembered-set
+  evidence and pinning; it is not equivalent to “RSet size is zero”. Read `reclaim candidate` and
+  `remset/marked/pinned` fields on the target build. An ineligible object waits for a complete
+  liveness cycle. **There is no boolean to turn this off from JDK 20.**
   `-XX:+G1EagerReclaimHumongousObjects` — experimental, default `true` — was accepted on 11
   through 19 and is `Unrecognized VM option` from 20 onward, so the JVM refuses to start on it
   (executed on Temurin 11, 17, 18, 19, 20, 21, 24 and 25). What remains is
@@ -104,6 +108,25 @@ Cleanup`. `Pause Mark Start` / `Pause Mark End` are ZGC's — a log quoting thos
 - Quote every write-barrier or RSet overhead figure as an estimate to be validated on the
   workload (a JMH run with `-prof gc` inside and outside a marking window), never as a
   constant of the collector.
+
+## Mark-stack overflow versus SATB pressure
+
+The mark stack holds objects discovered but not yet scanned while tracing the graph. SATB buffers
+hold old references from mutator stores and become additional marking roots. Heavy mutation can
+increase marking work, but `Concurrent Mark Restart for Mark Stack Overflow` specifically means
+the mark stack could not expand beyond `MarkStackSizeMax`; it does not prove an SATB queue
+overflow. Correlate graph breadth/live-set shape, mark-stack expansion, concurrent CPU starvation,
+SATB processing and cycle duration. Changing `G1SATBBufferSize` without evidence targets a
+different structure; increasing `MarkStackSizeMax` trades native memory for headroom and may only
+mask a workload/capacity problem.
+
+## Production handling
+
+Treat flag defaults and log strings as `(vendor, JDK feature, update, build)` facts. Capture the
+effective command line and `-Xlog:gc+init`; canary any collector/region/IHOP change under the same
+load, and validate tail latency, application throughput/CPU, allocation/promotion, marking CPU,
+fallbacks and post-GC live occupancy. GC logs can expose class-loader and path metadata; restrict
+and expire them like other production telemetry.
 
 ## References
 
