@@ -1,103 +1,92 @@
-# critical(), overhead components and choosing an interop approach
+# `critical()`, boundary cost, and interop selection
 
-## The three independent cost components
+## Model costs separately
 
-1. **Safepoint cost.** A plain downcall (JNI, or FFM without `critical`) transitions the thread
-   to `_thread_in_native` before entering C. In that state the JVM treats the thread as
-   self-safepoint-safe — it is not touching the Java heap, so a safepoint can proceed without
-   waiting for it. That state transition has a small, fixed, non-zero cost.
-2. **Marshaling cost.** Converting Java representations (objects, `String`, arrays) to C ones
-   and back. Zero for primitives passed by value; non-trivial for arrays and strings.
-3. **Verification and safety cost.** In JNI, signature and pending-exception checking on every
-   return; in FFM, checking that the `Arena` behind a `MemorySegment` is still alive — part of
-   which `critical` skips, moving that responsibility to the caller.
+1. **Transition and stub cost.** JNI and FFM establish a native call according to current
+   HotSpot implementation and target ABI. Fixed cost depends on compiler/stub shape and flags.
+2. **Marshaling and copying.** Strings, arrays, structs, callbacks and ownership transfer can
+   dominate an otherwise tiny call. JNI accessors may copy or pin; FFM code may copy into
+   native segments explicitly.
+3. **Validation and lifetime checks.** JNI references/exceptions and FFM segment
+   accessibility/liveness/descriptor checks have different safety surfaces.
+4. **Native work and queueing.** Locks, I/O, page faults, allocator contention and callbacks
+   determine worst-case duration and carrier/resource occupancy.
 
-`Linker.Option.critical(boolean allowHeapAccess)` attacks **component 1 only**. It makes the
-linker emit a stub that does not transition the thread out of the "Java" state, which removes
-the transition cost and, with `allowHeapAccess=true`, permits passing a heap-backed
-`MemorySegment.ofArray(...)` directly with no prior copy off-heap — the exact equivalent of
-JNI's `GetPrimitiveArrayCritical`.
+Benchmark the complete binding path. An empty native function measures only part (1), not the
+production call.
 
-The price is structural, not optional. Because the thread never leaves the Java state, the JVM
-cannot rely on it to reach a safepoint on its own while the native code runs. A safepoint
-requested in that window — a GC cycle, a statistics collection, a thread dump — waits for the
-critical call to return. A 20 ns `critical()` call does not move the needle. One that blocks
-for 200 ms on I/O can delay the whole JVM for 200 ms.
+## What `Linker.Option.critical` actually promises
 
-## Overhead components per call type
+The Java 25 API defines `critical(boolean allowHeapAccess)` as a hint that implementations
+may use for optimizations valid only when the foreign function:
 
-Orders of magnitude, illustrative — measure your own environment.
+- has an extremely short running time in **all** cases, comparable to an empty function; and
+- does not call back into Java, including through an upcall stub.
 
-| Component                        | JNI                                       | FFM plain downcall                | FFM `critical(false)`             | FFM `critical(true)`                 |
-| -------------------------------- | ----------------------------------------- | --------------------------------- | --------------------------------- | ------------------------------------ |
-| Thread state transition          | Yes, full cost (`JNIEnv*` plus JNI frame) | Yes (`_thread_in_native`)         | **No**                            | **No**                               |
-| Safepoint during the call        | Impossible while the call runs            | Possible at any time              | **Impossible for the whole call** | **Impossible for the whole call**    |
-| Heap array access without copy   | Yes, via `GetPrimitiveArrayCritical`      | No — the segment must be off-heap | No                                | **Yes**, via `MemorySegment.ofArray` |
-| Typical overhead, empty function | ~50-100 ns                                | ~20-50 ns                         | ~5-15 ns                          | ~5-15 ns plus heap access cost       |
-| Safe for a long or blocking call | Yes                                       | Yes                               | **No**                            | **No**                               |
+Violating those preconditions can cause performance loss or JVM crashes. The portable API
+does not promise a particular HotSpot thread-state transition, instruction sequence or
+safepoint behavior. Inspect and measure the deployed implementation if a decision depends on
+those internals.
 
-## Thread state, safepoint and pinning
+With `allowHeapAccess=true`, heap-backed segments may be passed for address-layout arguments.
+The exposed native address is temporary and valid only for the call. This avoids requiring an
+explicit off-heap copy in the Java code; it does not promise whether a collector/runtime pins,
+copies or uses another mechanism. Native code must not retain the pointer.
 
-| Call type                                 | Thread state during native execution | Effect on a global safepoint                      | Effect on VT pinning                                                                            |
-| ----------------------------------------- | ------------------------------------ | ------------------------------------------------- | ----------------------------------------------------------------------------------------------- |
-| JNI                                       | `_thread_in_native`                  | Does not block — thread is self-safepoint-safe    | Pins if the call blocks                                                                         |
-| FFM plain downcall                        | `_thread_in_native`                  | Does not block — same as JNI                      | Pins if the call blocks                                                                         |
-| FFM `critical(false)` or `critical(true)` | Stays in the Java state              | **Blocks** — the JVM waits for the call to return | Pins if the call blocks, **and** additionally delays any pending safepoint across the whole JVM |
+## Eligibility gate
 
-The plain downcall is not "worse than critical" on pinning; they pin identically when they
-block. The risk asymmetry runs the other way: a blocked plain downcall delays only the calling
-virtual thread, while a blocked `critical()` call can delay the entire JVM because no other
-thread can complete a safepoint cycle until it returns.
+| Criterion    | Eligible for an experiment                                           | Reject `critical()`                                                    |
+| ------------ | -------------------------------------------------------------------- | ---------------------------------------------------------------------- |
+| Duration     | bounded near empty-call cost across p99.99/worst tested inputs       | unbounded, data-dependent long tail, page fault or cold initialization |
+| Blocking     | audited no I/O, locks, waits, callbacks or hidden lazy work          | any blocking/unknown dependency                                        |
+| Upcalls      | none, directly or indirectly                                         | callback/reentrancy into Java possible                                 |
+| Heap pointer | used only synchronously during the call                              | retained, published or used asynchronously                             |
+| Value        | transition/copy cost is measured material at service level           | optimization is based only on a microbenchmark ratio                   |
+| Operations   | canary monitors safepoint/carrier/native-call tails; rollback exists | no production visibility or safe rollback                              |
 
-The exact `Linker.Option.critical` contract — including the guarantee that the thread does not
-leave the safepoint-unsafe state during the call — lives in the `java.lang.foreign.Linker.Option`
-javadoc for the build in use. Check it there before relying on it in production.
+There is no universal one-microsecond threshold. “Extremely short” must be conservative
+relative to the service's safepoint/tail objectives and the native function's worst case.
 
-## When `critical()` is eligible, by measurable criterion
+## Interop decision matrix
 
-| Criterion                            | Eligible for `critical()`                                     | Not eligible — plain downcall, or isolate on a dedicated pool                     |
-| ------------------------------------ | ------------------------------------------------------------- | --------------------------------------------------------------------------------- |
-| Expected call duration               | Sub-microsecond, **measured** with JMH, not estimated         | Any call whose duration was not measured, or measured above roughly 1 microsecond |
-| Blocking behaviour                   | Provably non-blocking — no I/O, no lock, no native allocation | Involves I/O, a lock, allocation, or calls back into Java (upcall)                |
-| Need for copy-free heap array access | Yes, so `critical(true)`                                      | Data is already off-heap, so `critical(false)` or no `critical` at all            |
-| Call frequency                       | High — exactly where safepoint overhead shows up in aggregate | Low — the gain does not justify the risk                                          |
-| Impact of a delayed safepoint        | Acceptable even in the measured worst case                    | GC pause or other-thread latency SLOs cannot absorb the extra delay               |
+| Approach                   | Strengths                                                                 | Risks/costs                                                                   | Prefer when                                                       |
+| -------------------------- | ------------------------------------------------------------------------- | ----------------------------------------------------------------------------- | ----------------------------------------------------------------- |
+| Existing JNI               | mature ecosystem, complete JNI/JVMTI control                              | manual references/errors, C glue, crash/memory-corruption surface             | stable audited legacy binding or capability unavailable in FFM    |
+| Plain FFM downcall         | Java layouts/handles, explicit lifetime, no C shim for many ABIs          | descriptors can still be wrong; restricted access; native/arena lifecycle     | new JDK 22+ C ABI binding after platform validation               |
+| FFM `critical`             | implementation may reduce transition cost; optional temporary heap access | severe preconditions, no upcall, implementation-specific internals            | measured tiny leaf function with bounded behavior and rollback    |
+| `jextract` + FFM           | generates layouts/constants/handles from headers                          | tool/version/ABI coupling; generated code does not own lifecycle/error policy | large stable C headers with reproducible generation/review        |
+| JNA/JNR or library wrapper | lower setup effort, ecosystem mapping                                     | extra layer and target-specific cost/behavior                                 | noncritical integration where supportability outweighs peak speed |
+| Out-of-process service     | failure/memory isolation, independent native lifecycle                    | serialization/network/operations/partial failure                              | unsafe or blocking library warrants blast-radius isolation        |
 
-The decision is never "this call looks fast". It is "I measured this call with JMH under
-production-like load and it is comfortably below the threshold at which a safepoint delay
-becomes visible to the rest of the system".
+FFM has stronger Java-side descriptors and lifetime checks than raw JNI, but neither makes a
+wrong ABI safe. Type widths (`long` differs across LP64/LLP64), packing, alignment, unions,
+bitfields, variadics and calling conventions require per-target validation.
 
-## Choosing an interop approach
+## Batching trade-off
 
-| Approach                     | Transition overhead            | Pins under VT if it blocks                          | Type safety                | Effort                                | When to use                                                                             |
-| ---------------------------- | ------------------------------ | --------------------------------------------------- | -------------------------- | ------------------------------------- | --------------------------------------------------------------------------------------- |
-| Hand-written JNI             | Highest                        | Yes, identical to the rest                          | Low, unchecked C           | High, C plus Java plus a native build | Stable legacy code; full control over the C wrapper                                     |
-| Panama FFM, plain downcall   | Medium-low                     | Yes, identical to JNI                               | High, checked at link time | Medium, pure Java                     | Default for new bindings on JDK 22+                                                     |
-| Panama FFM plus `critical()` | Lowest                         | Yes, identical — `critical` does not change pinning | High                       | Medium, requires prior measurement    | Short, non-blocking, high-frequency calls needing heap access or minimal safepoint cost |
-| `jextract` plus Panama       | Same as the generated downcall | Yes, identical                                      | High                       | Low, generated from the header        | C libraries with complex headers (structs, many functions)                              |
-| JNA                          | Moderate, reflection-based     | Yes                                                 | High                       | Low                                   | Prototyping, non-performance-critical paths                                             |
+Batching amortizes fixed transitions and often improves locality, but increases call duration,
+buffer ownership, cancellation latency and failure granularity. A 50 ms batch captures a
+carrier for 50 ms and is categorically ineligible for `critical()`, even if per-element work
+is tiny. Choose batch size from throughput, tail/cancellation budget, memory and overload
+limits; expose partial-result/error semantics.
 
-## Batching, and what it does not fix
+## Measurement design
 
-```java
-// Bad: N transitions for tiny per-element work
-for (int i = 0; i < 1000; i++) {
-    nativeLib.processElement(data[i]);   // 1000 x transition overhead
-}
+- JMH: compare JNI, plain FFM and eligible critical FFM for the same exported function,
+  descriptor, data copy and result consumption; use multiple forks and input sizes.
+- Capture normalized allocation/copy volume, native call duration distribution, CPU, code
+  cache/compilation state and end-to-end service tails.
+- Run with realistic contention, cold pages/library initialization, failure codes and each
+  supported OS/architecture ABI.
+- For critical experiments, collect safepoint timing and carrier saturation in the same run;
+  a faster mean with worse pauses/tails is a rejection.
+- Verify native compiler flags/sanitizer builds in CI; use AddressSanitizer/UBSan where the
+  toolchain permits, plus `-Xcheck:jni` for JNI tests.
 
-// Good: one transition, the work loop inside the native code
-nativeLib.processBatch(data, 0, 1000);   // 1 x transition overhead
-```
+## Primary references
 
-Transition overhead is fixed per call, not per byte, so batching amortises it. It does not
-remove pinning risk: a `processBatch` that takes 50 ms still pins a virtual thread for 50 ms —
-it just does so once instead of a thousand smaller times. Batching is a throughput technique,
-not a concurrency one; keep the two concerns separate.
-
-## Measuring, not estimating
-
-| Goal                                                            | Command                                                                                                                                                                |
-| --------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Compare JNI, plain FFM and FFM `critical` for an empty function | `java --enable-native-access=ALL-UNNAMED -jar benchmarks.jar EmptyCallBench -f 3 -wi 5 -i 10`                                                                          |
-| Measure allocation and GC per copy variant                      | `java --enable-native-access=ALL-UNNAMED -jar benchmarks.jar MemcpyCriticalBench -prof gc -f 1 -wi 5 -i 5`                                                             |
-| Isolate the pure safepoint cost                                 | Compare `-Xlog:safepoint+stats=debug` with and without `critical()` on the same benchmark. `-XX:+PrintSafepointStatistics` is removed — the JVM refuses to start on it |
+- [Java 25 `Linker.Option`](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/foreign/Linker.Option.html)
+- [Java 25 `Linker`](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/foreign/Linker.html)
+- [JEP 454: Foreign Function & Memory API](https://openjdk.org/jeps/454)
+- [JNI specification: array operations](https://docs.oracle.com/en/java/javase/25/docs/specs/jni/functions.html#array-operations)
+- [JEP 444: Virtual Threads](https://openjdk.org/jeps/444)
