@@ -1,110 +1,110 @@
-# Test plan and validity
+# Test Plan and Validity
 
-## Open-loop injection
+## Claim
 
-```javascript
-// k6 — arrival rate is fixed by schedule, not by response
-export const options = {
-  scenarios: {
-    warmup: {
-      executor: 'constant-arrival-rate',
-      rate: 200,
-      timeUnit: '1s',
-      duration: '3m',
-      preAllocatedVUs: 100,
-      maxVUs: 1000,
-      tags: { phase: 'warmup' }, // discarded at analysis time
-    },
-    steady: {
-      executor: 'constant-arrival-rate',
-      startTime: '3m',
-      rate: 500,
-      timeUnit: '1s',
-      duration: '10m',
-      preAllocatedVUs: 200,
-      maxVUs: 2000,
-      tags: { phase: 'measure' },
-    },
-  },
-};
+```text
+Question / decision:
+System boundary and version:
+Population and workload unit:
+Arrival model and why:
+Configuration and topology:
+Response variables / SLO window:
+Scenarios and excluded states:
+Experimental unit and comparison design:
+Minimum decision-relevant effect:
 ```
 
-What matters is that the generator issues by schedule and does not wait for the previous
-response. The constructs that decide which model a script is running, per tool:
+## Workload contract
 
-| Tool    | Closed-loop — flag in review                                                                                                                                                     | Open-loop                                                                                                                                                                                           |
-| ------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| k6      | `shared-iterations`, `per-vu-iterations`, `constant-vus`, `ramping-vus` — a VU count, iterations "as many as possible"                                                           | `constant-arrival-rate`, `ramping-arrival-rate` (`startRate`, `stages: [{target, duration}]`, `preAllocatedVUs`, `maxVUs`)                                                                          |
-| Gatling | `constantConcurrentUsers`, `rampConcurrentUsers`, `incrementConcurrentUsers`; also any open-model user whose scenario loops (`forever`, `repeat`) — inside the loop it is closed | `atOnceUsers`, `rampUsers`, `constantUsersPerSec`, `rampUsersPerSec`, `stressPeakUsers`, `incrementUsersPerSec`, one pass of the scenario per user                                                  |
-| JMeter  | Thread Group (N threads looping); a Constant Throughput Timer only caps that loop's rate — it still cannot exceed `N/R`                                                          | Open Model Thread Group (JMeter 5.5+): a schedule such as `rate(100/sec) random_arrivals(10 min)`, with `even_arrivals`, `pause` and `/sec`, `/min`, `/hour` units; threads are created per arrival |
-| wrk     | `wrk` — every connection sends as soon as the previous response arrives                                                                                                          | `wrk2 -R <rate>`, which also reconstructs omitted samples                                                                                                                                           |
-| Locust  | The default `HttpUser` loop, including `wait_time = constant(0)`                                                                                                                 | Approximate only — `constant_pacing`; see `coordinated-omission`                                                                                                                                    |
+Record offered schedule or population/think time; requests and useful work per iteration;
+operation mix; payload/data/key/tenant distributions; correlation/workflows; session,
+connection and TLS behavior; retries/timeouts/abandonment; cache/data initialization; and
+background/dependency state.
 
-Detection when the model is not obvious from the script, correction of data already
-collected, and the Gatling and Locust caveats are `coordinated-omission`.
+## Executor recognition
 
-Size `maxVUs` from Little's Law using the **worst** predicted latency. If the run hits
-`maxVUs`, the generator silently became a closed loop and the run is void.
+Verify syntax against the installed version's official documentation.
 
-## Queueing prediction, computed before the run
+| Tool       | Closed-model examples              | Open-model examples and caveats                                    |
+| ---------- | ---------------------------------- | ------------------------------------------------------------------ |
+| k6         | constant/ramping VUs; per-VU loops | constant/ramping arrival rate; an iteration can make many requests |
+| Gatling    | concurrent-user injection          | users-per-second injection; scenario loops can add closed feedback |
+| JMeter     | looping Thread Group               | Open Model Thread Group is marked experimental in current docs     |
+| wrk family | wrk uses connection feedback       | wrk2 schedules rate; verify fork/version semantics                 |
+| Locust     | user loops, including pacing       | pacing alone is not independent-arrival injection                  |
 
-```
-W_total = 1 / (μ(1 − ρ))      W_queue = W_total − 1/μ
-```
+Classify scheduling semantics, not names.
 
-Queue wait equals service time already at ρ = 0.5 and diverges above 0.9. With
-deterministic service time (M/D/1) the wait is half that of M/M/1 at the same utilisation —
-service-time variance is a capacity lever as real as hardware.
+## Generator sizing
 
-Write the prediction down before executing. A result that violates the lower bound your own
-experiment's mechanics impose means the experiment is wrong, and there is no way to notice
-without the prior calculation.
+For arrival scheduling, initial concurrent iterations are:
 
-## JVM configuration for the run
+\[
+L_g=\lambda_i E[W_i]
+\]
 
-```
--Xms<same as Xmx> -Xmx<...> -XX:+AlwaysPreTouch
--Xlog:gc*,safepoint:file=gc.log:time,uptime:filecount=5,filesize=20m
--XX:StartFlightRecording:name=run,maxsize=512m,settings=profile,disk=true
--XX:NativeMemoryTracking=summary
-```
+Use iteration rate and duration, not request RPS unless one iteration is one request. Tail
+or deadline bounds can guide allocation, but a pilot must cover client code, distribution,
+connections and overhead.
 
-`-XX:+FlightRecorder` is not a way to record. Deprecated since JDK 13, it is still accepted
-on JDK 25 with a warning and starts no recording (executed, Temurin 25.0.3): the JVM boots,
-the plan says "JFR on", and the file never appears. `-XX:StartFlightRecording` is the flag
-that records.
+For k6 arrival-rate executors, preallocate enough VUs to avoid allocation as a confound.
+Dropped iterations mean scheduled starts could not occur; retain the achieved arrival
+process and diagnose VU supply versus generator/iteration degradation.
 
-## Before the run
+## Environment contract
 
-- [ ] SLO documented with metric, threshold and evaluation window
-- [ ] Generator on a machine separate from the application
-- [ ] Dataset with representative cardinality and access distribution, including the
-      hot/cold ratio
-- [ ] Open-loop mode configured
-- [ ] `maxVUs` sized by Little's Law for the **worst** predicted latency
-- [ ] Analytic prediction made and recorded
-- [ ] JVM flags as above
-- [ ] Generator and target clocks synchronised (NTP)
-- [ ] Artefact version, JDK version and flags recorded with the plan
+Record artifact/image/JDK/JVM/resources, generator version/host, topology/network/TLS/DNS,
+dependency versions/quotas/data, observability, measured clock offset, and state-based
+readiness/warmup criteria.
 
-## During the run
+Do not impose generic JVM flags. Equal Xms/Xmx and AlwaysPreTouch change startup, memory
+commitment and paging; use them only when matching production or isolating that factor.
 
-- [ ] Smoke test passed before any measurement
-- [ ] Warm-up metrics tagged for discard
-- [ ] `dropped_iterations` and `vus` versus `maxVUs` watched live
-- [ ] Heap after full collection tracked (soak)
-- [ ] Connection pool and executors tracked
-- [ ] The exact load at which the SLO starts being violated recorded
+## Pilot gates
 
-## After the run — validity first
+- [ ] checks distinguish expected failures from corruption
+- [ ] requests and useful work per iteration are measured
+- [ ] parser fails on absent or changed output fields
+- [ ] generator has calibrated headroom beyond the planned schedule
+- [ ] client and target timelines can be correlated
+- [ ] incomplete work, timeouts and graceful stop remain visible
+- [ ] setup/reset is reproducible enough for the claim
+- [ ] telemetry overhead is measured or held constant
 
-- [ ] `dropped_iterations == 0` and `vus < maxVUs` — otherwise **discard the run**
-- [ ] Issued requests reconcile with planned requests
-- [ ] p50/p90/p99/p99.9/max **and the sample count** published together
-- [ ] Latency steps correlated with pause timestamps in `gc.log`
-- [ ] The limiting resource identified, with the evidence that supports it
-- [ ] Spread across at least three repeated runs recorded
-- [ ] JFR, `gc.log` and raw output archived as a versioned baseline
+## Run validity matrix
 
-The validity conditions come before interpretation. A run that fails them does not produce
-a smaller number or a noisier one — it produces a number about the generator.
+| Dimension          | Evidence                                        | If violated                              |
+| ------------------ | ----------------------------------------------- | ---------------------------------------- |
+| arrival fidelity   | scheduled vs started timestamps; dropped starts | claim applies only to achieved process   |
+| generator headroom | CPU/runnable delay/GC/network/connections       | generator-limited; rerun or narrow claim |
+| target identity    | digest/config/resources/replicas                | reject treatment comparison              |
+| dependency state   | latency/errors/quota/version                    | qualify scenario or rerun                |
+| completeness       | missing samples, clock gaps, histogram overflow | tail/causal claim may be unidentified    |
+| workload fidelity  | mix/payload/key/tenant state                    | external validity is limited             |
+
+Application errors are not a generic validity failure when they are an intended response.
+A correctness/safety fault may abort the run; a controlled rejection during stress can be
+the finding.
+
+## Analysis and reproducibility
+
+- Keep offered, started, admitted, attempted and useful rates separate.
+- State latency boundaries and retry/timeout treatment.
+- Preserve independent run results instead of pooling them.
+- State histogram precision/range and aggregation.
+- Correlate queues, resources, JVM and dependencies before attribution.
+- Treat preregistered model predictions as diagnostics, not oracles.
+- Record every exclusion and anomaly.
+
+Choose repetitions to resolve the declared effect or report inconclusive. Randomize/block
+treatment order. Predeclare sequential stopping to avoid repeatedly testing until a desired
+result appears.
+
+Archive plans, scripts, immutable identifiers, raw output, target telemetry, environment
+metadata and analysis code.
+
+## Safety
+
+Authorize production load; define separate safety abort and SLO thresholds; cap load;
+prevent real payments/messages; protect credentials and personal data; coordinate
+dependency quotas; verify recovery; and clean test state.
