@@ -1,109 +1,156 @@
 ---
 name: lock-inflation
 description: >
-  The lifecycle of a Java monitor under contention: the fast-locked and inflated mark word
-  states on the current baseline, the LockStack and the ANONYMOUS_OWNER inflation protocol,
-  adaptive spinning, the ObjectMonitor entry queues, measuring contention as a fraction of
-  wall time, and reducing or partitioning a hot critical section. Use when threads sit in
-  BLOCKED on a synchronized block, when jdk.JavaMonitorEnter dominates a recording, when
-  throughput stops scaling as threads are added, when -XX:LockingMode or
-  -XX:+UseBiasedLocking appears on a JVM command line, or when someone proposes swapping
-  synchronized for ReentrantLock to avoid virtual-thread pinning. Does not cover
-  happens-before and safe publication (java-memory-model), collecting the profile itself
-  (jfr-and-async-profiler), cache-line contention with no lock involved
-  (false-sharing-and-contended), or lock-free algorithm design (lock-free-patterns).
+  Diagnosing and engineering Java intrinsic-monitor contention across fast and inflated monitor
+  states without freezing one HotSpot release's internals. Covers ownership, recursion, wait sets,
+  entry queues, inflation/deflation, virtual-thread behavior, JFR/thread-dump evidence,
+  threshold/censoring, convoys, fairness, lock graphs, critical-section redesign, partitioning and
+  validation. Use when `synchronized` wait/hold time is suspected; JMM correctness, explicit locks,
+  false sharing and lock-free algorithms have separate owners.
 ---
 
-# Lock Inflation
+# Lock inflation
 
 ## Purpose
 
-Decide whether a `synchronized` section is actually costing latency, and if so what to
-change. The failure this prevents is the wrong conclusion drawn from a single thread
-dump: one thread caught in `BLOCKED` at the instant of sampling is not contention, and
-"throughput went up after the fix" is not proof the lock was the bottleneck.
+Determine whether intrinsic-monitor acquisition/ownership is a material cause of latency or
+capacity loss, identify the guarded work and owner, then preserve semantics while reducing harmful
+serialization. Inflation is an implementation state, not itself proof of a production problem.
 
-The second failure is folklore about the current baseline. Biased locking is gone,
-`LM_LIGHTWEIGHT` is the default, and JEP 491 ended `synchronized` pinning virtual
-threads — none of which makes a contended lock cheaper. Each of those changes reduced
-the cost of the _uncontended_ path or of _carrier exclusivity_; the cost of waiting is
-untouched.
+## Ownership boundary
 
-## Workflow
+- This skill owns intrinsic monitors (`synchronized`, `Object.wait/notify`) and HotSpot monitor
+  lifecycle evidence.
+- `java-thread-safety-contracts` owns API invariant/lock policy.
+- `concurrency-diagnostics` owns broad deadlock/starvation/live incident triage.
+- `lock-free-patterns` owns nonblocking alternatives; `false-sharing-and-contended` owns cache-line
+  sharing without logical lock ownership.
 
-1. **Confirm the mechanism you are measuring against.** Run
-   `java -XX:+PrintFlagsFinal -version | grep LockingMode`. `2` (`LM_LIGHTWEIGHT`) is the
-   JDK 25 default; `1` means someone set `-XX:LockingMode=1` and inherited a deprecated
-   flag — flag it for removal before comparing anything. The flag exists only on the JDK 24–25
-   generation: measured, `LockingMode` is **absent on Temurin 21.0.12, present as `2` on
-   25.0.4, and absent again on 26.0.2**. So on 21 and from 26 an empty result is the expected
-   answer rather than a broken command — the check degrades to a false negative, not an error.
-   On those releases read `UseObjectMonitorTable` instead, which decides what an inflated mark
-   word looks like.
-2. **Name a suspect critical section before instrumenting.** Searching the whole heap for
-   contention produces a profile nobody can act on.
-3. **Collect over a window, not a moment.** `jcmd <pid> JFR.start settings=profile
-duration=60s filename=locks.jfr`, or repeated thread dumps. If the application uses
-   virtual threads, `jstack` will not show them — use
-   `jcmd <pid> Thread.dump_to_file -format=json`.
-4. **Map thread state to the right event.** `BLOCKED` on `synchronized` →
-   `jdk.JavaMonitorEnter`; `Object.wait()` → `jdk.JavaMonitorWait`; `LockSupport.park`,
-   `ReentrantLock` and connection pools → `jdk.ThreadPark`. Connection-pool waiting is
-   never `JavaMonitorEnter`. See `references/measuring-contention.md`.
-5. **Express contention as a fraction of aggregate wall time**, not of CPU time, and
-   compare it against a baseline run. An isolated percentage decides nothing.
-6. **Reduce scope before changing primitive.** Move work that needs no lock out of the
-   section; then partition by key; only then reach for a different primitive, chosen by
-   the read/write profile and the features you need.
-7. **Validate by the same metric that convicted the lock.** Aggregate
-   `jdk.JavaMonitorEnter` time or `BLOCKED` count must fall, under the same load and the
-   same warm-up, and check which resource became the next limit.
+## Investigation contract
 
-## Rules
+```text
+symptom/SLO, load and affected interval:
+monitor/critical section and guarded invariant:
+contending thread/task roles and key distribution:
+acquisition wait, hold time, queue/blocked count and owner path:
+JDK/vendor/build, virtual/platform thread mode and effective flags:
+JFR event settings/thresholds/stacks/loss and dump cadence:
+CPU/quota/GC/safepoint/downstream evidence:
+candidate semantic change and correctness/fairness guardrails:
+```
 
-- Contention is aggregate time, never a single sample. Require recurring
-  `jdk.JavaMonitorEnter` events over 1 ms, or a continuously growing
-  `ThreadInfo.getBlockedCount()`, before calling it contention.
-- Never conclude contention from one `jstack`. Take multiple dumps.
-- The JFR lock events carry a 10 ms threshold in `profile.jfc` (20 ms in `default.jfc`).
-  Contention finer than that is invisible until you build a custom `.jfc` with
-  `jfr configure` — absence of events at the default threshold is not absence of
-  contention.
-- Overhead below 5% is usually acceptable, 5–20% is visible in p99, above 20% is likely
-  the dominant bottleneck. These are triage bands, not thresholds: calibrate against the
-  system's SLO.
-- Do not build tuning scripts or runbooks around `-XX:LockingMode=1`. `LM_LEGACY` and
-  `LM_MONITOR` were deprecated in JDK 24 (JDK-8334299); the flag became **obsolete in
-  JDK 26** — accepted and silently ignored — and was **removed in JDK 27**, where it has
-  zero occurrences in `globals.hpp`. Lightweight locking is the only mechanism from 26 on,
-  so setting the flag on 26 changes nothing and on 27 is unrecognised.
-- `-XX:+UseBiasedLocking` is not a tuning option to restore. Disabled by default in
-  JDK 15 (JEP 374), code removed entirely in JDK 18 (JDK-8256425).
-- Never choose `ReentrantLock` over `synchronized` "to avoid pinning". Since JEP 491
-  (JDK 24) a contended `synchronized` unmounts the virtual thread instead of pinning its
-  carrier. Choose on semantics: `tryLock`, an acquisition timeout, explicit fairness, or
-  multiple `Condition`s.
-- The waiting still costs latency after JEP 491. The task blocked on the monitor is still
-  in the request's response time and still appears in `jdk.JavaMonitorEnter`.
-- `StampedLock` is **not** reentrant — acquiring it twice on one thread deadlocks against
-  itself. `ReentrantReadWriteLock` is reentrant and simpler.
-- Monitor wake-up order is not FIFO. `_cxq` and `_EntryList` do not guarantee fairness;
-  if service order matters to the SLO, use `new ReentrantLock(true)` and accept the cost.
-- Deflation of an idle monitor happens on a periodic asynchronous pass. It is not a
-  real-time mitigation and must not appear in a remediation plan.
-- Hold the lock for the whole iteration of a synchronized collection, not just while
-  obtaining the iterator.
-- Double-checked locking requires the field to be `volatile`; prefer the holder idiom.
-- Acquire multiple locks in one total order (for example, sorted by identity) or accept
-  the deadlock.
+## Monitor model
+
+`synchronized` provides mutual exclusion, reentrancy and JMM monitor edges. HotSpot can represent
+uncontended/lightweight ownership differently from an inflated `ObjectMonitor`. Contention,
+`wait()`, identity/hash/header constraints, diagnostics and runtime heuristics can trigger
+transitions depending on release/configuration.
+
+An inflated monitor typically tracks an owner, recursion, contenders/entry structures and waiters,
+but field names, queue algorithms, mark-word/table representation, spinning and deflation change
+across JDKs. Use release-tagged source and runtime evidence before explaining internals. See
+`references/monitor-lifecycle.md`.
+
+Inflation does not mean every later acquisition parks; fast/reentrant/spinning paths and ownership
+may still vary. Deflation is lifecycle/housekeeping, not a remediation for active contention.
+
+## Event-to-mechanism mapping
+
+| State/evidence                    | Candidate mechanism                      | Caveat                                                 |
+| --------------------------------- | ---------------------------------------- | ------------------------------------------------------ |
+| thread `BLOCKED` entering monitor | intrinsic-monitor acquisition            | one sample has no duration/population                  |
+| JFR `JavaMonitorEnter`            | qualifying monitor acquisition wait      | settings/threshold censor shorter waits                |
+| JFR `JavaMonitorWait`             | `Object.wait` lifecycle                  | intentional condition wait may be healthy              |
+| JFR `ThreadPark`                  | park-based synchronizer/wait             | includes many locks, pools, futures, queues            |
+| high CPU in monitor/spin path     | spinning/churn/contention                | require owner/progress and compiled/native attribution |
+| deadlock report                   | monitor/ownable synchronizer cycle found | pool/resource/class-init starvation may be absent      |
+
+Discover event schemas/settings on the target JDK. Stock JFC thresholds are version/configuration
+facts; no fixed 1/10/20 ms rule proves absence. Use positive controls and opportunity estimates.
+
+## Measurement
+
+Collect repeated/time-bounded evidence aligned to workload:
+
+- event count and duration distribution by monitor class/address/owner stack where available;
+- affected operations, wait per operation and fraction of requests encountering wait;
+- concurrent blocked population/queue trajectory, not only summed thread durations;
+- owner hold path and hold-time proxy/instrumentation when acquisition events cannot show it;
+- CPU, quota/throttle, GC/safepoint and remote/I/O inside the owner path;
+- key/tenant/shard skew without unsafe-cardinality production labels.
+
+Summed waits across threads overlap and can exceed wall-clock interval. Divide only by a compatible
+denominator (for example total request operations or total eligible thread-time) and state it.
+Arbitrary “5/20% contention bands” are not SLO evidence.
+
+## Remediation decision tree
+
+```text
+unrelated/slow work inside lock?
+  -> move/precompute only if invariant, callback ordering and failure atomicity remain correct
+one hot key/global invariant but independent partitions exist?
+  -> shard/stripe/owner model; test skew, cross-partition operations and memory cost
+read-mostly immutable-replace semantics?
+  -> volatile/atomic immutable snapshot
+needs interruptible/timed/multiple-condition/fairness API?
+  -> ReentrantLock chosen for semantics, then measure
+short exact counter/operation?
+  -> atomic/adder only if consistency semantics fit
+lock is not bottleneck or change adds complexity?
+  -> keep synchronized
+```
+
+Changing primitive without changing serialization often moves the same queue. Fair
+`ReentrantLock` can alter barging/throughput/tail but is not a FIFO/SLO guarantee in all operations.
+`StampedLock` is non-reentrant and optimistic reads require validation/retry; use only after evidence.
+
+## Virtual threads and versions
+
+JEP 491 in JDK 24 changed HotSpot monitor behavior so blocking in `synchronized` generally no longer
+pins a virtual thread to its carrier. It did not make the critical section parallel or remove wait
+latency. Native/foreign/implementation edge cases and older JDKs still require target evidence.
+
+Locking flags and mark-word/monitor-table internals have changed across JDK 17/21/24/25 and later.
+Never build a runbook around one numeric `LockingMode` value or assume an absent flag means a broken
+command. Verify support/effect against the exact build and route lifecycle review to
+`jvm-performance-review`.
+
+## Correctness and failure tests
+
+- invariant/history tests before and after reducing/splitting lock scope;
+- callback reentry/throw/block and I/O timeout while owning lock;
+- reverse multi-lock order, equal-key tie and class initialization;
+- `wait` spurious wakeup, notify/timeout/interrupt/shutdown races;
+- pool/queue/future starvation with no monitor cycle;
+- hot key, many virtual threads, CPU quota/throttle and GC pause;
+- fairness/starvation and owner death/long hold;
+- JFR threshold positive control and artifact loss.
+
+## Anti-patterns
+
+| Anti-pattern                              | Failure                               | Better approach                            | Narrow exception                  |
+| ----------------------------------------- | ------------------------------------- | ------------------------------------------ | --------------------------------- |
+| One `jstack` proves contention            | moment has no rate/duration           | repeated/JFR window + workload denominator | immediate deadlock cycle evidence |
+| Inflation equals bottleneck               | state can persist/idly exist          | acquisition/hold/queue/SLO evidence        |
+| Fixed event threshold means no contention | censored waits                        | inspect settings and positive control      |
+| Swap to `ReentrantLock` for speed         | serialization unchanged               | choose semantic feature/redesign invariant | measured implementation effect    |
+| Fair lock guarantees SLO                  | scheduling/barging/hold time remain   | measure fairness/tail and overload         |
+| Identity-sort solves every deadlock       | collisions/ties/external locks        | stable total order with tie handling       |
+| JEP 491 removes lock cost                 | only carrier pinning behavior changed | bound contention and resource demand       |
+
+## Definition of done
+
+- [ ] Monitor/invariant, contender population, owner path and wait/hold evidence are identified.
+- [ ] JFR/dump settings, thresholds, opportunity, loss and target JDK are validated.
+- [ ] Overlap-compatible denominators and request/SLO impact are reported.
+- [ ] Alternative preserves atomicity, callback order, failure and progress semantics.
+- [ ] Hot-key, virtual-thread, fairness, shutdown and deadlock/starvation tests pass.
+- [ ] The metric that supported contention improves without shifting failure elsewhere.
 
 ## References
 
-- [Monitor lifecycle](references/monitor-lifecycle.md) — mark word tags, the `LockStack`,
-  the `ANONYMOUS_OWNER` inflation protocol step by step, the `ObjectMonitor` fields and
-  its three queues, and the JDK version table. Read when you need to explain _why_ an
-  inflation happened, or when reconciling this baseline against older documentation.
-- [Measuring and reducing contention](references/measuring-contention.md) — the
-  collection commands, the thread-state-to-JFR-event table, the overhead formula, and the
-  primitive-selection and partitioning recipes. Read when collecting a contention profile
-  or choosing what to change.
+- [Version-scoped monitor lifecycle](references/monitor-lifecycle.md)
+- [Measuring and reducing contention](references/measuring-contention.md)
+- [JEP 491](https://openjdk.org/jeps/491)
+- [JLS 17 monitors and waits](https://docs.oracle.com/javase/specs/jls/se25/html/jls-17.html)
+- [OpenJDK ObjectMonitor source](https://github.com/openjdk/jdk/tree/master/src/hotspot/share/runtime)
